--- a/index.html
+++ b/index.html
@@ -1,11 +1,60 @@
-<!DOCTYPE html>
+!<!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>My Portfolio</title>
+  
 </head>
 <body>
-    <h1>Hello</h1>
+
+  <header>
+    <h1>J Nandini</h1>
+    <p>Student</p>
+    <nav>
+      <a href="#about">About</a>
+      <a href="#skills">Skills</a>
+      <a href="#projects">Projects</a>
+      <a href="#contact">Contact</a>
+    </nav>
+  </header>
+
+  <div class="container">
+
+    <section id="about">
+      <h2>About Me</h2>
+      <p>Hello! I am a beginner web developer learning HTML and CSS. This is my simple portfolio website.</p>
+    </section>
+
+    <section id="skills" class="skills">
+      <h2>Skills</h2>
+      <span>HTML</span>
+      <span>CSS</span>
+      <span>Python</span>
+      <span>JavaScript (Basic)</span>
+    </section>
+
+    <section id="projects" class="projects">
+      <h2>Projects</h2>
+      <ul>
+        <li>✔ Personal Portfolio Website</li>
+        <li>✔ Simple Calculator</li>
+        <li>✔ To-Do List App</li>
+      </ul>
+    </section>
+
+    <section id="contact">
+      <h2>Contact</h2>
+      <p>Email: jnandini188@email.com</p>
+      <p>Phone: +91 9160922365</p>
+    </section>
+
+  </div>
+
+  <footer>
+    <p>© 2026 J Nandini | All Rights Reserved</p>
+  </footer>
+
 </body>
 </html>
+
